<resources>
    <string name="app_name" translatable="false">MAD loginpage</string>
    <string name="not_have_account">Not have account?</string>
    <string name="register">Register</string>
    <string name="google_maps_key" translatable="false">AIzaSyC9LSOhwjGOoGOAx-XhRsXPDEDJ-Yh7NlU</string>
    <string name="_2mbs_software_2025" translatable="false">2MBS Software 2025</string>
    <string name="welcome_n_nes_edu_cad">Welcome \n NES EDU CAD</string>
    <string name="enter_your_user_name">Enter your User name</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="menu">menu</string>
    <string name="what_are_you_looking_for">What are you looking for</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="notification_panel">notification_panel</string>
    <string name="titleid">TitleID</string>
    <string name="detailsid">DetailsID</string>
    <string name="add_an_notification">Add An Notification</string>
    <string name="loading">Loading...</string>
    <string name="paste_your_mapview_on_search_bar">Paste Your MapView On Search Bar</string>
    <string name="add_courses">Add Courses</string>
    <string name="course_name">Course Name</string>
    <string name="enter_cource_name">Enter Cource Name</string>
    <string name="category">Category</string>
    <string name="national_identity_card_number">National Identity Card Number</string>
    <string name="batch">Batch</string>
    <string name="course_fee">Course Fee</string>
    <string name="enter_course_fee">Enter Course fee</string>
    <string name="duration">Duration</string>
    <string name="count_of_duation">Count of duation</string>
    <string name="branch">Branch</string>
    <string name="start_date">Start Date</string>
    <string name="closing_date">Closing Date</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="review">Review</string>
    <string name="how_was_your_experience_with_this_app">How was your experience with this app?</string>
    <string name="comment">Comment</string>
    <string name="submit_review">Submit Review</string>
    <string name="close">Close</string>
    <string name="create_admin_user">Create Admin User</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_name">Enter your First name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter your Last name</string>
    <string name="user_name">User Name</string>
    <string name="simple_and_unique">Simple and Unique</string>
    <string name="date_of_create">Date of Create</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="created_admin_name">Created admin name</string>
    <string name="admin_name">Admin name</string>
    <string name="create_user">Create User</string>
    <string name="administrator">Administrator</string>
    <string name="go_to_nibm">Go to NIBM</string>
    <string name="user">user</string>
    <string name="addcourse">addcourse</string>
    <string name="course">course</string>
    <string name="classroom">Classroom</string>
    <string name="updated_rating_of_this_app">Updated Rating Of This App</string>
    <string name="password_change_n_succesfully">Password Change \n Succesfully</string>
    <string name="registration">Registration</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="contact_number">Contact number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="add_new_branch">Add New Branch</string>
    <string name="branch_name">Branch Name</string>
    <string name="enter_branch_name">Enter branch name</string>
    <string name="enter_address_name">Enter address name</string>
    <string name="location">Location</string>
    <string name="map">map</string>
    <string name="set_map_location">Set Map Location</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Enter Postal Code</string>
    <string name="add_branch">Add Branch</string>
    <string name="diploma_in_data_science">Diploma in Data Science</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="save">Save</string>
    <string name="forget_password">Forget password</string>
    <string name="enter_your_user_email">Enter your User Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="diploma_in_computer_science">Diploma in Computer Science</string>
    <string name="hnd_in_computer_science">HND in Computer Science</string>
    <string name="hi">Hi</string>
    <string name="hnd_data_science">HND Data Science</string>
    <string name="nes_edu_cad">NES EDU CAD</string>
    <string name="get_your_course_of_us_and_win_the_life_and_careeer_path">get your course of us and win the life and careeer path</string>
    <string name="sign_in">Sign in</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="add_notifications">Add notifications</string>
    <string name="see_all_notifications">See All Notifications</string>
    <string name="hey">Hey!</string>
    <string name="welcome_to_your_account">Welcome to Your Account</string>
    <string name="profile">profile</string>
    <string name="update">Update</string>
    <string name="log_out">Log out</string>
    <string name="congratulations">Congratulations!</string>
    <string name="registation_successful">Registation Successful!</string>
    <string name="visit_documentation_check_your_email">Visit documentation check your email</string>
    <string name="get_started">Get Started</string>
    <string name="select_location">Select Location</string>
    <string name="welcome_to_edu_cad">Welcome to EDU CAD</string>
    <string name="join_with_us_and_get_your_experience">Join with us and get your Experience</string>
    <string name="enter_your_email_or_phone_number">Enter your Email or phone number</string>
    <string name="create_password">Create Password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_hava_a_account">Already hava a account?</string>
    <string name="log_in">Log In</string>
    <string name="title_id">Title ID</string>
    <string name="details_id">Details ID</string>
    <string name="example_email_com">example@email.com</string>
    <string name="description_of_the_branch">Description of the branch</string>
    <string name="computer_science">Computer Science</string>
    <string name="courese_diploma_in_data_system">Course: Diploma in Data System</string>
    <string name="category_computer_science">Category: Computer Science</string>
    <string name="badge_2025f1">Batch : 2025F1</string>
    <string name="duration_1_year_full_time">Duration: 1 Year Full Time</string>
    <string name="branch_colombo">Branch: Colombo</string>
    <string name="start_date_01_03_2025">Start Date: 01/03/2025</string>
    <string name="closing_date_01_03_2026">Closing Date: 01/03/2026</string>
    <string name="course_fee_300_000">Course Fee: 300 000/=</string>
    <string name="description_ndata_science_programing_fundamentals_datastructure_etc">Description: \nData Science,Programing Fundamentals,DataStructure.etc</string>
    <string name="_100_credits">100 credits</string>
    <string name="apply">Apply</string>
    <string name="upload_your_profile_photo">Upload Your Profile Photo</string>
    <string name="profile_photo">profile photo</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="upload_restrictions_n1_max_file_size_5_mb_n2_allowed_formats_jpg_png_jpeg_n3_image_dimensions_150x150_to_1080x1080_pixels_n4_ensure_stable_internet_connection_n5_no_malicious_files">Upload Restrictions:\n1. Max file size: 5 MB\n2. Allowed formats: JPG, PNG, JPEG\n3. Image dimensions: 150x150 to 1080x1080 pixels\n4. Ensure stable internet connection\n5. No malicious files</string>
    <string name="branches">Branches</string>
    <string name="business_studies">Business Studies</string>
    <string name="courese_diploma_in_bs">Course: Diploma in BS</string>
    <string name="course_fee_200_000">Course Fee: 200 000/=</string>
    <string name="description_ndata_science_business_fundamentals_business_structure_etc">Description: \nData Science,Business Fundamentals,Business Structure.etc</string>
    <string name="_120_credits">120 credits</string>
    <string name="student">Student</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="filter">Filter</string>
    <string name="student_id">Student ID</string>
    <string name="name">Name</string>
    <string name="course_id">Course ID</string>
</resources>