<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recycleView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="com.example.madfinalproject.ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:id="@+id/linearLayout2"
            android:padding="20dp"
            android:layout_width="411dp"
            android:layout_height="912dp"
            android:layout_margin="15px"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:id="@+id/hey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/hey"
                android:textColor="@color/primaryColor"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ACCname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/welcome_to_your_account"
                android:textColor="@color/primaryColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="146dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:contentDescription="@string/profile"
                android:padding="10dp"
                app:srcCompat="@drawable/profile" />

            <TextView
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:text="@string/first_name"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="244dp" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="@string/enter_your_first_name"
                android:inputType="text"
                android:text=""
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/llname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="81dp"
                tools:layout_editor_absoluteY="243dp" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="@string/enter_your_last_name"
                android:inputType="text"
                android:text=""
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="48dp"
                tools:layout_editor_absoluteY="640dp" />

            <TextView
                android:id="@+id/llocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/national_identity_card_number"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="343dp" />

            <EditText
                android:id="@+id/nic"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="@string/national_identity_card_number"
                android:inputType="text"
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="390dp" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="305dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="@string/enter_your_address"
                android:inputType="text"
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="390dp" />

            <TextView
                android:id="@+id/lcontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="263dp"
                tools:layout_editor_absoluteY="292dp" />

            <EditText
                android:id="@+id/contactNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="+94"
                android:inputType="number"
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="33dp"
                tools:layout_editor_absoluteY="767dp" />

            <TextView
                android:id="@+id/lemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/thirdColor"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="256dp"
                tools:layout_editor_absoluteY="343dp" />

            <EditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_shape"
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColorHint="#888888"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="694dp" />


            <Button
                android:id="@+id/userbtn"
                android:layout_width="257dp"
                android:layout_height="54dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/SecondaryColor"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="193dp" />
            <Button
                android:id="@+id/log_out_btn"
                android:layout_width="181dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="19sp"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="193dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>